[package]
name = "dnd_roller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20"
yew-bootstrap = "0.5"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
yew-plotly = "0.2.0"
gloo = "0.8.1"
chrono = "0.4.26"
web-sys = "0.3.64"
regex = "1.9.1"
