[package]
name = "dice-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = "0.10.0"
rand = "0.8.5"
regex = "1.10.2"
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.65", features = ["console"] }
