[package]
name = "dice_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]

[unstable]
build-std = ["panic_abort", "std"]

[dependencies]
gloo = "0.10.0"
js-sys = "0.3.65"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-rayon = { version = "1.0.3"}
web-sys = { version = "0.3.65", features = ["console"] }
